Full site built
full site built

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ESL Coin Tron | ESL Coin TRX | ESL Coin</title>
+        <title>ESL Coin Tron | ESL Coin TRX | Home </title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/ESL%20Coin%20Icon%20100x100.png" />
         <!-- Font Awesome icons (free version)-->
@@ -20,19 +20,19 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">ESL Coin TRX</a>
+                <a class="navbar-brand js-scroll-trigger" href="index.html">ESL Coin TRX</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#background">Background</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#roadmap">Roadmap</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Applications</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#involve">Get Involved</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="auction.html">Auction</a></li>                        
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#roadmap">Roadmap</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#portfolio">Applications</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html#about">About</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="involve.html">Get Involved</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="involve.html#governance">Governance</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="auction.html">Auction</a></li> 
                     </ul>
                 </div>
             </div>
@@ -41,7 +41,7 @@
         <header class="masthead bg-primary text-white text-center">
             <div class="container d-flex align-items-center flex-column">
                 <!-- Masthead Avatar Image-->
-                <img class="masthead-avatar mb-5" src="assets/img/ESL%20Coin%20Icon%20100x100.png" alt="ESLCoinLogo" />
+                <img class="masthead-avatar mb-5" src="assets/img/eslcointrxheader.png" alt="ESLCoinLogo" />
                 <!-- Masthead Heading-->
                 <h1 class="masthead-heading text-uppercase mb-0">The Future of Language Learning</h1>
                 <!-- Icon Divider-->
@@ -91,9 +91,14 @@
                 </div>
                 <!-- Roadmap Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead">ESL Coin TRX will launch to the technical community through a daily auction. Token holders can acquire tokens through the auction and can stake ESL Coin TRX with the contract for daily dividends.</p></div>
-                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead">The development team will use the proceeds of the daily auction to support an ecosystem of dApps on the ESL Coin TRX network. </p></div>
-                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead">ESL Coin TRX will be released to the public for purchase at this stage through public exchanges and an internal exchange on the ESL Coin website. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead">(Codename Student) ESL Coin TRX will launch to the technical community through a daily auction. Token holders can acquire tokens through the auction and can stake ESL Coin TRX with the contract for daily dividends.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead">(Codename Tutor) The development team will use the proceeds of the daily auction to support an ecosystem of dApps on the ESL Coin TRX network through in house development and development grants. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead">(Codename Graduate) ESL Coin TRX will be released to the public for purchase at this stage through public exchanges and an internal exchange on the ESL Coin website. A portion of the developer pool will be allocated to liquidity on major exchanges.</p></div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-4 ml-auto"><p><h3>Governance & DAO</h3></p><p class="lead">(Codename Teacher) A governance system will be implemented and token holders are invited to partake in the direction and vote on operational aspects of ESL Coin TRX. Voting will be rewarded with tokens from the voting pool.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Cross Chain Compatability</h3></p><p class="lead">(Codename Professor) ESL Coin TRX will work to become cross chain compatible with the ETH network, Polkadot network and other networks. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Academic Outreach</h3></p><p class="lead">(Codename Dean) ESL Coin network will be reaching out to major colleges and universities to build up adoption of ecosystem dapps such as test score transmission platform and verification system for educators.</p></div>
                 </div>
                 <!-- Roadmap Section Button-->
                 <div class="text-center mt-4">
@@ -109,7 +114,7 @@
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
                 <!-- Portfolio Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Applications</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Applications In Progress</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
@@ -155,6 +160,8 @@
                         </div>
                     </div>
                 </div>
+                <!--Invitation to Join-->
+                <p class="mb-5">More dApps will be added over time. Community developers are invited to partipate in the developers grant program.</p>
             </div>
         </section>
         <!-- About Section-->
@@ -169,17 +176,30 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
+                <div class="container">
+                    <h3>Opportunity</h3>
+                    <p>The ESL Industry is estimate to be at $80 Billion USD and has a lot of opportunity for improvement. From tutor matching to accomodation and improving school grades, ESL Coin seeks to create an open sourced ecosystem for developers to create dApps to disrupt this billion dollar industry.</p>
                 </div>
-                <!-- About Section Button-->
-                <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
-                        <i class="fas fa-download mr-2"></i>
-                        Get Started with Auction!
-                    </a>
+                <div class="container">
+                    <h3>Team</h3>
+                    <p>The ESL Coin TRX team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio econoimc backgrounds. The ESL Coin TRX team is not related to the ESL Coin Eth team but we do hope to work together when we reach Phase Professor (Cross Chain Compatability).</p>
+                </div>
+                <div class="container">
+                    <h3>Tokenomics</h3>
+                    <p>The Tron implmentation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 1 million tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 30 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
+                        <ul>
+                            <li>Grants for dApp development</li>
+                            <li>Promotion & growth via YouTubers and influencers</li>
+                            <li>Team milestones</li>
+                            <li>charter members</li>
+                            <li>Community builidng</li>
+                            <li>Operational Expenses</li>
+                        </ul>
+                    <p>It is important to note that ESL Coin TRX is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>    
+                </div>
+                <div class="container">
+                    <h3>Governance and DAO</h3>
+                    <p>ESL Coin TRX will eventaully evolve into a Decentralized Autonomous Organization (DAO) such that token holders can participate in the governance and operations of the ecosystem.</p>
                 </div>
             </div>
         </section>
@@ -196,9 +216,15 @@
                 </div>               
                 <!-- Involve Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p><h3>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p></div>
-                    <div class="col-lg-4 mr-auto"><p><h3>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p></div>
-                    <div class="col-lg-4 ml-auto"><p><h3>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin TRX. Stake them and test out the apps for bounties and rewareds.  </p></div>
+                    <div class="col-lg-4 ml-auto">
+                        <p><h3>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p>
+                    </div>
+                    <div class="col-lg-4 mr-auto">
+                        <p><h3>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p>
+                    </div>
+                    <div class="col-lg-4 ml-auto">
+                        <p><h3>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin TRX <a href="auction.html">at the auction.</a> Stake them and test out the apps for bounties and rewards.</p>
+                    </div>
                 </div>
             </div>
         </section>
@@ -206,6 +232,15 @@
         <footer class="footer text-center">
             <div class="container">
                 <div class="row">
+                    <!-- Footer Email-->
+                    <div class="col-lg-4 mb-5 mb-lg-0">
+                        <h4 class="text-uppercase mb-4">Contact Us</h4>
+                        <p class="lead mb-0">
+                            Email: <a href="mailto:eslcoin@protonmail.com">eslcoin@protonmail.com</a>
+                        </p>
+                    </br>
+                        <img class="masthead-avatar mb-5" src="assets/img/eslcointrxheadermini2.png" alt="ESLCoinLogo" />
+                    </div>                    
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
@@ -216,7 +251,7 @@
                     <div class="col-lg-4">
                         <h4 class="text-uppercase mb-4">About ESL Coin TRX</h4>
                         <p class="lead mb-0">
-                            About ESL Coin TRX is the Tron Based implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
+                            About ESL Coin TRX is the Tron Based fork implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
                         </p>
                     </div>
                 </div>
