--- a/involve.html
+++ b/involve.html
@@ -119,7 +119,7 @@
                 </div>
                 <!-- Charter Member Slots-->
                 <div class="container text-center">
-                    <h3>Day 1 Charter Members</h3>
+                    <h3>Day 1 Charter Members (1,000 TRX Buy in)</h3>
                     <div class="divider-custom-icon fa-7x">
                         <i class="fas fa-user"></i>
                         <i class="fas fa-user"></i>
@@ -127,34 +127,20 @@
                         <i class="fas fa-user"></i>
                         <i class="fas fa-user"></i>
                     </div>
-                    <div class="divider-custom-icon fa-7x">    
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                    </div>
-                    <h3>Day 2 Charter Members</h3>
+                    <h3>Day 2 Charter Members (1,000 TRX Buy in)</h3>
                     <div class="divider-custom-icon fa-7x">
                         <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-spinner fa-pulse"></i>
-                        <i class="fas fa-spinner fa-pulse"></i>
-                    </div>
-                    <div class="divider-custom-icon fa-7x">    
-                        <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
                     <div class="container text-center">
-                        <p>To participate in Charter Member Program, please send specified 100k TRX to address:</p>
-                        <p>ABCDEFG</p>
+                        <p>To participate in Charter Member Program, please send 1,000TRX (value will increase) to address:</p>
+                        <p>TDtvnCGJs8AdrENJbYGTqLiyiZ13UELUpX</p>
                         <p>ESL will be sent out within 24 hours</p>
                         <p>To ensure a faster turn around time, DM admin a message on Telegram</p>
-                        <p><i>Disclaimer: The Charter Member Program dividends is based on the dividends collected from the auction on the specified date and number of participants sharing. 50% of the day's dividends will be shared. For example if 5 people participated in day 2 and the day closed at 5 Mil TRX, 2,250,000 TRX will be split 5 ways giving each charter member 450,000 TRX.</i></p>
+                        <p><i>Disclaimer: The Charter Member Program dividends is based on the dividends collected from the auction on the specified date and number of participants sharing. 50% of the day's dividends will be shared. For example if 5 people participated in day 2 and the day closed at 500,000 TRX, 225,000 TRX will be split 5 ways giving each charter member 45,000 TRX.</i></p>
                         </div>      
                 </div>
             </div>
