--- a/involve.html
+++ b/involve.html
@@ -119,10 +119,8 @@
                 </div>
                 <!-- Charter Member Slots-->
                 <div class="container text-center">
-                    <h3>Day 1 Charter Members (1,000 TRX Buy in)</h3>
+                    <h3>Day 1 Charter Members</h3>
                     <div class="divider-custom-icon fa-7x">
-                        <i class="fas fa-user"></i>
-                        <i class="fas fa-user"></i>
                         <i class="fas fa-user"></i>
                         <i class="fas fa-user"></i>
                         <i class="fas fa-user"></i>
@@ -138,7 +136,7 @@
                     <div class="container text-center">
                         <p>To participate in Charter Member Program, please send 1,000TRX (value will increase) to address:</p>
                         <p>TDtvnCGJs8AdrENJbYGTqLiyiZ13UELUpX</p>
-                        <p>ESL will be sent out within 24 hours</p>
+                        <p>ESL will be sent out within 24 hours of day 1 auction </p>
                         <p>To ensure a faster turn around time, DM admin a message on Telegram</p>
                         <p><i>Disclaimer: The Charter Member Program dividends is based on the dividends collected from the auction on the specified date and number of participants sharing. 50% of the day's dividends will be shared. For example if 5 people participated in day 2 and the day closed at 500,000 TRX, 225,000 TRX will be split 5 ways giving each charter member 45,000 TRX.</i></p>
                         </div>      
