--- a/auction.html
+++ b/auction.html
@@ -209,7 +209,7 @@
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
                         <a class="btn btn-outline-light btn-social mx-1" href="http://twitter.com/eslcointrx"><i class="fab fa-fw fa-twitter"></i></a>
-                        <a class="btn btn-outline-light btn-social mx-1" href="#!"><i class="fab fa-fw fa-telegram"></i></a>
+                        <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcointrx"><i class="fab fa-fw fa-telegram"></i></a>
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
