--- a/auction.html
+++ b/auction.html
@@ -81,17 +81,20 @@
         <!-- Technical Launch Info Section-->
         <section class="page-section mb-0" id="tl-info">
             <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary">Technical Launch</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary">Launch Phases</h2>
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
                 <div class="container"></div>
+                <h3>Technical Launch</h3>
                     <p>The goal of the technical launch is to raise awareness of the ESL Coin TRX token within the technical community, create a development fund for the Tron division team and build up a liquidity fund for the public launch of the token on major exchanges. The technical launch will be conducted through an initial auction series with a daily emission stating at 250k token a day and reducing every day. Unlike Initial Coin Offerings, the intended audience are technical investors/participants and developers who do believe in creating an ecosystem to disrupt the 80 Billion dollars language learning space. During the technical launch and anyone wanting to participate must interact directly with the smart contract and upon public launch a seperate dedicated UI will be created for interaction with the contract. To reward token particpants during this stage, 95% of the daily auction is shared among token stakers.</p>
                     <p>Technical participants can elect to be part of the <a href="involve.html#charter">charter members program</a> and receive a share of day 1 and 2 auction revenue see <a href="involve.html#charter">charter members program</a>.</p>
                     <p>Non technical partipants can partake in this project through other means. See our <a href="involve.html">get invovled page</a> for more information.</p>
-                    <p>During phase 3 (CODENAME Graduation), ESL Coin TRX will be released to the public through a combination of an in house exchange and public crypto exchanges. A portion of the developer pool will be allocated to providing liquidity on exchanges.</p>
+                <h3>Public Launch</h3>    
+                <p>During phase 3 (CODENAME Graduation), ESL Coin TRX will be released to the public through a combination of an in house exchange and public crypto exchanges. A portion of the developer pool will be allocated to providing liquidity on exchanges. </p>
+                <p>The auction will continue on through a dedicated auction page & UI. The daily emission significantly reduced. </p>
                     <br>
                 </div>
                 <!-- Tutorial Buttons-->
