--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                     </div>
                 </div>
                 <!--Invitation to Join-->
-                <p class="mb-5">More dApps will be added over time. Community developers are invited to partipate in the developers grant program.</p>
+                <p class="mb-5">More dApps will be added over time. Community developers are invited to partipate in the <a href ="involve.html#developer">developers grant program</a>.</p>
             </div>
         </section>
         <!-- About Section-->
@@ -186,7 +186,7 @@
                 </div>
                 <div class="container">
                     <h3>Tokenomics</h3>
-                    <p>The Tron implmentation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 1 million tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 30 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
+                    <p>The Tron implmentation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 250k tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
                         <ul>
                             <li>Grants for dApp development</li>
                             <li>Promotion & growth via YouTubers and influencers</li>
@@ -244,7 +244,6 @@
                     <!-- Footer Social Icons-->
                     <div class="col-lg-4 mb-5 mb-lg-0">
                         <h4 class="text-uppercase mb-4">Around the Web</h4>
-                        <a class="btn btn-outline-light btn-social mx-1" href="http://twitter.com/eslcointrx"><i class="fab fa-fw fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social mx-1" href="http://t.me/eslcointrx"><i class="fab fa-fw fa-telegram"></i></a>
                     </div>
                     <!-- Footer About Text-->
