white paper tbd

--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@
                     <div class="col-lg-4 ml-auto"><p><h3>Academic Outreach</h3></p><p class="lead">(Codename Dean) ESL Coin network will be reaching out to major colleges and universities to build up adoption of ecosystem dapps such as test score transmission platform and verification system for educators.</p></div>
                 </div>
                 <!-- Roadmap Section Button-->
-                <div class="text-center mt-4">
+                <!--//<div class="text-center mt-4">
                     <a class="btn btn-xl btn-outline-light" href="assets/whitepaper.pdf">
                         <i class="fas fa-download mr-2"></i>
                         See White Paper!
                     </a>
-                </div>
+                </div>-->
             </div>
         </section>
         
