--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                 </div>
                 <div class="container">
                     <h3>Team</h3>
-                    <p>The ESL Coin TRX team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio econoimc backgrounds. The ESL Coin TRX team is not related to the ESL Coin Eth team but we do hope to work together when we reach Phase Professor (Cross Chain Compatability).</p>
+                    <p>The ESL Coin TRX team consists of language teachers, community builders and developers with a passion to make English learning a possibility to everyone around the world regardless of socio econoimc backgrounds. The ESL Coin TRX project is a parallel indepedent fork of the Eth project. We do hope to work together when we reach Phase 5 - CODENAME Professor (Cross Chain Compatability).</p>
                 </div>
                 <div class="container">
                     <h3>Tokenomics</h3>
