--- a/involve.html
+++ b/involve.html
@@ -125,7 +125,7 @@
                         <i class="fas fa-user"></i>
                         <i class="fas fa-user"></i>
                     </div>
-                    <h3>Day 2 Charter Members (1,000 TRX Buy in)</h3>
+                    <h3>Day 2 Charter Members</h3>
                     <div class="divider-custom-icon fa-7x">
                         <i class="fas fa-user"></i>
                         <i class="fas fa-spinner fa-pulse"></i>
@@ -134,7 +134,7 @@
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
                     <div class="container text-center">
-                        <p>To participate in Charter Member Program, please send 1,000TRX (value will increase) to address:</p>
+                        <p>To participate in Charter Member Program, please send 10,000TRX (value will increase as each spot is occupied by five folds) to address:</p>
                         <p>TDtvnCGJs8AdrENJbYGTqLiyiZ13UELUpX</p>
                         <p>ESL will be sent out within 24 hours of day 1 auction </p>
                         <p>To ensure a faster turn around time, DM admin a message on Telegram</p>
