--- a/involve.html
+++ b/involve.html
@@ -134,9 +134,10 @@
                         <i class="fas fa-spinner fa-pulse"></i>
                     </div>
                     <div class="container text-center">
-                        <p>To participate in Charter Member Program, please send 10,000TRX (value will increase as each spot is occupied by five folds) to address:</p>
+                        <p>To participate in Charter Member Program, please send specified Tron to address:</p>
                         <p>TDtvnCGJs8AdrENJbYGTqLiyiZ13UELUpX</p>
-                        <p>ESL will be sent out within 24 hours of day 1 auction </p>
+                        <p>Current spot price <h3>10,000 TRX</h3></p>
+                        <p>ESL will be sent out within 24 hours of day 1 auction.</p>
                         <p>To ensure a faster turn around time, DM admin a message on Telegram</p>
                         <p><i>Disclaimer: The Charter Member Program dividends is based on the dividends collected from the auction on the specified date and number of participants sharing. 50% of the day's dividends will be shared. For example if 5 people participated in day 2 and the day closed at 500,000 TRX, 225,000 TRX will be split 5 ways giving each charter member 45,000 TRX.</i></p>
                         </div>      
