--- a/index.html
+++ b/index.html
@@ -186,16 +186,54 @@
                 </div>
                 <div class="container">
                     <h3>Tokenomics</h3>
+                    <p>ESL Coin TRX is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>
                     <p>The Tron implmentation of ESL Coin will consist of an initial technical launch phase through an auction with a daily emission starting at 250k tokens. The tokens emitted will decrease over time to ensure price stability. A development pool of 3 Million premine is retained by the development team and will be unlocked overtime for the purpose of: </p>
-                        <ul>
-                            <li>Grants for dApp development</li>
-                            <li>Promotion & growth via YouTubers and influencers</li>
-                            <li>Team milestones</li>
-                            <li>charter members</li>
-                            <li>Community builidng</li>
-                            <li>Operational Expenses</li>
-                        </ul>
-                    <p>It is important to note that ESL Coin TRX is designed to be a <b><u>UTILITY TOKEN</u></b> and the whole project is a huge experiment until we reach DEAN PHASE (Phase 6).</p>    
+                    <div class="row">
+                        <div class="col-lg-6 ml-auto">
+                            <div class="container">
+                                <p><b>Ecosystem</b>  | 33.33% | 1,000,000 ESL</p>
+                                <p>ESL tokens reserved for future ecosystem objectives like partnerships, marketing, exchange listings, hiring, etc.</p>
+                                <ul>
+                                    <li>Tokens Vested over 24 months</li>
+                                    <li>4.00% released immediately</li>
+                                    <li>1.27% released each month</li>
+                                </ul>
+                                <br>
+                            </div>
+                            <div class="container">
+                                <p><b>Launch Liquidity</b>  | 20.00% | 600,000 ESL</p>
+                                <p>ESL tokens reserved for listing on major exchanges (Eg. Just Swap and USwap).</p>
+                                <br>
+                            </div>
+                            <div class="container">
+                                <p><b>Developers Grant</b>  | 26.00% | 780,000 ESL</p>
+                                <p>ESL tokens reserved for developers grant fund to incentivize new dapps on the Ecosystem.</p>
+                                <br>
+                            </div>
+                        </div>
+                        <div class="col-lg-6 ml-auto">
+                            <div class="container">
+                                <p><b>Advisors</b> | 4.00% | 120,000 ESL</p>
+                                <p>ESL tokens reserved for the advisory board. advisor tokens are  vested to demonstrate long-term commitment.</p>
+                                <ul>
+                                    <li>Tokens Vested over 12 months</li>
+                                    <li>0.33% released immediately</li>
+                                    <li>0.33% released each month</li>
+                                </ul>
+                                <br>
+                            </div>
+                            <div class="container">
+                                <p><b>Team</b> | 16.67% | 500,000 ESL</p>
+                                <p>ESL tokens reserved for the ESL team. Team tokens are locked and vested to demonstrate long-term commitment.</p>
+                                <ul>
+                                    <li>Tokens locked for 12 months</li>
+                                    <li>Tokens Vested over 24 months</li>
+                                    <li>0.7% released each month</li>
+                                </ul>
+                                <br>
+                            </div>
+                        </div>    
+                    </div>
                 </div>
                 <div class="container">
                     <h3>Governance and DAO</h3>
